--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>COMPLETE THE FORM</h1>
     <div class="design">
-    <form action="">
+    <form action="./index2.html">
         <label for="name">Name</label><br>
         <input type="text" name="name" id="name" placeholder="enter your name">
         <br>
